Code cleanup after PMD and Findbugs
git-svn-id: https://svn.code.sf.net/p/openuss/code/branches/openuss-plexus-usability@4060 60046477-0c10-0410-bf4b-e552a4ff1768